# empty-scaffold-allocation

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
configs/: datasets.yaml  esa_balanced.yaml  esa_trainsupport.yaml  split_ratios.yaml
data/: README.md
docs/: full_reproduction.md
empty-scaffold-allocation/: environment.yml
empty-scaffold-allocation/configs/: datasets.yaml
empty-scaffold-allocation/data/: README.md
empty-scaffold-allocation/scripts/: 01_structural_cohesion_and_distribution_shift.py  02_scaffold_split.py  05_esa_condition_sweep.py  08_metric_sensitivity_analysis.py
notebooks/: 01_scaffold_split_from_raw.ipynb  02_regression_metric_comparison_xgboost.ipynb  03_classification_metric_comparison_xgboost.ipynb  04_datasail_esa_repair_audit.ipynb  README.md
outputs/: README.md
scripts/: 04_datasail_and_esa_repair.py  06_classification_normpr_analysis.py  07_regression_relmae_analysis.py  README.md
scripts/analysis/: classification_normpr_analysis.py  datasail_and_esa_repair.py  datasail_esa_repair.py  esa_condition_sweep_compact.py  metric_sensitivity_analysis.py  regression_relmae_analysis.py  scaffold_split.py  split_leakage_metrics.py  structural_cohesion_and_distribution_shift.py  umap_cluster_split.py
scripts/models/: README.md  train_fcnn_fingerprint.py  train_xgboost_fingerprint.py
src/: README.md
src/empty_scaffold/: __init__.py  chem_utils.py  leakage.py  (+5 more)
tests/: README.md  conftest.py  test_demo_data_layout.py  test_metrics.py  test_project_imports.py  test_scaffold_detection.py  test_scaffold_splitting.py
(+20 files in other folders)
